# learning-rust

./: .gitignore  README.md
general/compare_structs/: Cargo.toml
general/compare_structs/src/: main.rs
general/loops/src/: main.rs
general/vectors/src/: main.rs
webgl/: Cargo.toml  index.html
webgl/pkg/: package.json  webgl.d.ts  webgl.js  webgl_bg.wasm  webgl_bg.wasm.d.ts
webgl/shader-testing/: Cargo.toml  index.html
webgl/shader-testing/src/: lib.rs
webgl/src/: app_state.rs  constants.rs  input.rs  lib.rs  misc.rs  triangle_drawing.rs  websocket.rs
webgl/test_drawing_text/: Cargo.toml  readme.md
webgl/test_drawing_text/assets/: font.fnt
webgl/test_drawing_text/src/: constants.rs
webgl/triangle_drawing/: Cargo.toml  index.html
webgl/triangle_drawing/src/: lib.rs
webgl/triangle_drawing_pixel/: Cargo.toml  index.html
webgl/triangle_drawing_pixel/src/: constants.rs  lib.rs
webgl/triangle_drawing_texture/: Cargo.toml  index.html  readme.md
webgl/triangle_drawing_texture/src/: constants.rs  lib.rs  misc.rs  websocket.rs
webgpu/: Cargo.toml  index.css  index.html
webgpu/pkg/: package.json  webgpu.d.ts  webgpu.js  webgpu_bg.wasm  webgpu_bg.wasm.d.ts
webgpu/src/: compute.rs  compute_test.rs  constants.rs  helpers.rs  lib.rs  misc.rs  triangle_drawing.rs
webgpu/triangle_drawing/: Cargo.toml
webgpu/triangle_drawing/src/: generic_helpers.rs  lib.rs  misc.rs
websocket/client/: Cargo.toml
websocket/client/src/: main.rs
websocket/server/: Cargo.toml
websocket/server/src/: main.rs
