[package]
name = "shader_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.72"
features = ["Document", "Element", "HtmlCanvasElement", "WebGlBuffer", "WebGlVertexArrayObject", "WebGl2RenderingContext", "WebGlProgram", "WebGlShader", "Window", "console", "Response", "WebGlUniformLocation", "WebGlTexture", "HtmlImageElement", "Performance", "BinaryType", "FileReader", "MessageEvent", "ProgressEvent", "WebSocket", "HtmlAudioElement", "Text"]
