[package]
name = "test_drawing_text"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
nx = { git = "ssh://git@github.com/ChWeTa/nx.git", version = "0.1.0", branch = "WebSockets" }
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.66"
console = "0.15.7"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
gloo-utils = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.77"
features = ["Document", "Element", "HtmlCanvasElement", "WebGlBuffer", "WebGlVertexArrayObject", "WebGl2RenderingContext", "WebGlProgram", "WebGlShader", "Window", "console", "Response", "WebGlUniformLocation", "WebGlTexture", "HtmlImageElement", "Performance", "BinaryType", "FileReader", "MessageEvent", "ProgressEvent", "WebSocket", "HtmlAudioElement", "Text", "ErrorEvent", "CloseEvent"]
