[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["ws", "macros"] }
bincode = "1.3.3"
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0.194"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [] }
nx = { git = "ssh://git@github.com/ChWeTa/nx.git", version = "0.1.0", branch = "WebSockets" }
